--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,26 @@
+body {
+    background: url(../image/spartak.jpg) no-repeat 0 0 transparent;
+    background-size: 100%;
+    max-width: 1128px;
+    text-align: center;
+}
+
+h1{
+    color: rgba(25,25,112,1);
+    font-size: 24px;
+}
+
+h2{
+    font-size: 16px;
+}
+
 label {
     display: block;
+    color:rgba(25,25, 112, 1);    
 }
 
 form {
-    font-size: 25px;
+    font-size: 16px;
     border: 1px;
     margin: 0 auto;
     width: 800px;
@@ -22,4 +39,67 @@ input {
     input {
         width: 200px;
     }
+}
+
+.footer {
+    background: rgba(226, 226, 226, 1);
+    margin-top: 23px;
+    padding: 36px 0;
+    font-size: 14px;
+    letter-spacing: 0.3px;
+    flex: 0 0 auto;
+}
+
+.footer-width {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 auto;
+    max-width: 1128px;   
+}
+
+.footer-left__element {
+    font-weight: 700;
+}
+
+.footer-left {
+    width: 33%;
+}
+.footer-center {
+    letter-spacing: -0.1px;
+}
+
+.footer-right {
+    text-align: right;
+    width: 32%;
+}
+
+.footer-center__element {
+    display: block;
+    margin-bottom: 4px;
+}
+
+.footer__link {
+    text-decoration: none;
+    color: rgba(0, 0, 0, 1);
+    position: relative;
+    padding-left: 5px;
+}
+
+.footer__link:first-child::before {
+    content:none;
+}
+
+.footer__link:before {
+    content: '';
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 3px;
+    height: 12px;
+    width: 1px;
+    background: rgba(0, 0,0,1);
+}
+
+.footer-right-list {
+    margin-bottom: 4px;
 }
